--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -179,7 +179,7 @@
                 {% else %}
                 <div class="col-1 my-3">
                     <a href="/profile/{{x['_id']}}">
-                        <img src="{{['image_url']}}" style="border-radius: 10px;" height="75rem" width="80rem">
+                        <img src="{{x['image']}}" style="border-radius: 10px;" height="75rem" width="80rem">
                     </a>
                 </div>
                 {% endif %}
