--- a/api/templates/nft_list_item.html
+++ b/api/templates/nft_list_item.html
@@ -191,10 +191,9 @@
                                 <h5>Duración *</h5>
                             </option>
                             <!--Acá los valores estan expresados en segundos-->
-                            <option value="86400">1 Día</option>
-                            <option value="172800">2 Días</option>
-                            <option value="604800">7 Días</option>
-                            <option value="2628003600">1 Mes</option>
+                            <option value="15">15 segundos</option>
+                            <option value="60">1 minuto</option>
+                            <option value="3600">1 hora</option>
                         </select>
                     </div>
                     <div class="col py-3">
