--- a/api/templates/nft_transfer_successfully.html
+++ b/api/templates/nft_transfer_successfully.html
@@ -129,8 +129,10 @@
                         <img src="{{nft['image_url']}}">
                     </div>
                     <hr>
+                    <h6>Nuevo propietario del item: {{orderId['receiver']['user']}}</h6>
                     <h5 class="azul">+ {{orderId['price']}} $MFC Agregado a tu wallet.</h5>
                     <h6 class="text-success">Nuevo balance: {{user_wallet['balance']}} $MFC</h6>
+
                 </div>
                 <div class="col-4"></div>
             </div>
